_sass/_masthead.scss
// Masthead
//
// Super small header above the content for site name and short description.

.masthead {
  padding: 1.5rem;
  padding-bottom: 3.8rem;
  margin-bottom: 1.5rem;
  background-image: linear-gradient(to right,  #ffb3ba,#ffdfba,#ffffba, #baffc9,#bae1ff);
  @media screen and (min-width: 40em) {
    background-image: none;
    margin-bottom: 0;
    padding-bottom: 1.5rem;
  }

  .divider {
    @media screen and (min-width: 40em) {
      height: 25px;
      width: 200%;
      margin-top: 60px;
      margin-left: -35px;
      background-image: linear-gradient(to right,  #ffb3ba,#ffdfba,#ffffba, #baffc9,#bae1ff 52%);
    }
  }
}

.masthead-title {
  margin-top: 0;
  margin-bottom: 0;
  color: $gray-4;
  font-weight: bold;
  font-size: 2em;
  letter-spacing: -1px;
  @media screen and (min-width: 40em) {
    font-size: 1.6em;
  }

  a {
    color: inherit;
    float: left;
  }

  a:hover {
    color: #e75d5d;
    text-decoration: none;
  }

  small a {
    display: inline;
    font-size: 75%;
    font-weight: 400;
    opacity: 0.7;
    padding: 10px 10px;
    // Gaps between nav items, but not on the last one
    &:not(:last-child) {
      margin-right: 0;
    }
    margin-left: 20px;
    @media screen and (min-width: 38em) {
      display: inline;
    }
  }
}

// mobiel menu

.site-nav {
  position: absolute;
  top: 65px;
  right: 15px;
  border: 0;
  background-color: #fff;
  border-radius: 5px;
  text-align: right;

  .nav-trigger {
      display: none;
  }

  .menu-icon {
    float: left;
    width: 36px;
    height: 26px;
    line-height: 0;
    padding-top: 10px;
    text-align: center;

    > svg path {
      fill: $gray-4;
    }
  }

  label[for="nav-trigger"] {
    display: block;
    float: right;
    width: 36px;
    height: 36px;
    z-index: 2;
    cursor: pointer;
  }

  input ~ .trigger {
    clear: both;
    display: none;
  }

  input:checked ~ .trigger {
    display: inline;
    padding-bottom: 5px; 
  }

  @media screen and (min-width: 40em) {
    position: inherit;
    float: left;
    border: none;
  
    label[for="nav-trigger"] {
      display: none;
    }

    .menu-icon {
      display: none;
    }

    input ~ .trigger {
      display: block;
    }

    }
  }

